# worker-template

./: .copierignore  .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  _tasks.py  copier.yaml  devspace.yaml  dotenv.example  pyproject.toml
.claude/commands/: ship-it.md
alembic/: env.py  script.py.mako
alembic/versions/: cf1c62d50694_initial_task_execution.py
k8s/: postgres-statefulset.yaml  rabbitmq-deployment.yaml  redis-deployment.yaml
scripts/: devspace-banner.sh  ensure-db-secret.sh  ensure-rabbitmq-secret.sh  ensure-redis-secret.sh  k3d-down.sh  k3d-up.sh  start-scheduler.sh  start.sh  templatize.sh
tests/: docker-compose.yml
worker_template/: broker.py  health_server.py  scheduler.py  worker.py
worker_template/core/: config.py  logging.py  metrics.py  tenants.py
worker_template/db/: base.py  retry.py  session.py
worker_template/middleware/: __init__.py  logging_mw.py  metrics_mw.py  state_tracking.py  tenant.py
worker_template/models/: base.py  shared.py  task_execution.py
worker_template/realtime/: __init__.py  contracts.py  emitter.py
worker_template/services/: task_execution_service.py
worker_template/tasks/: __init__.py  contracts.py  example_task.py
worker_template/tests/: conftest.py
worker_template/tests/fixtures/: settings.py
worker_template/tests/integration/: test_example_task.py  test_health_server.py  test_task_execution.py
worker_template/tests/unit/: conftest.py  test_broker.py  test_config.py  test_contracts.py  test_db_retry.py  test_db_session.py  test_emitter.py  test_logging.py  test_metrics.py  test_metrics_mw.py  test_middleware.py  test_state_tracking.py  test_state_tracking_events.py  test_state_tracking_mw.py  test_task_execution_service.py
