[project]
name = "worker-template"
version = "0.1.0"
description = "A TaskIQ async worker service template"
requires-python = ">=3.13,<3.14"
dependencies = [
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
    "taskiq-redis>=1.0.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "prometheus-client>=0.21.0",
    "ecs-logging>=2.2.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.0.0",
    "filelock>=3.13.0",
    "psycopg[binary]>=3.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF",
    "ANN", "S", "W", "EM", "TRY", "A", "ARG", "C90", "PT",
    "RSE", "RET",
]
ignore = [
    "TRY003",  # long exception messages
    "S101",    # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"worker_template/tests/**" = ["ANN", "ARG001", "S101", "PLR2004", "PLR0913", "PLC0415"]
"worker_template/services/**" = ["PLR0913"]
"worker_template/middleware/**" = ["ARG002"]
"alembic/**" = ["ANN"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["alembic/versions", "worker_template/tests"]

[[tool.mypy.overrides]]
module = [
    "taskiq.*",
    "taskiq_aio_pika.*",
    "taskiq_redis.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["worker_template/tests"]
addopts = "--tb=short -n auto --cov=worker_template --cov-fail-under=60"
markers = [
    "integration: marks tests as integration tests (require Docker services)",
]

[tool.coverage.run]
omit = [
    "worker_template/tests/*",
    "worker_template/worker.py",
    "worker_template/scheduler.py",
    "worker_template/health_server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
