[project]
name = "worker-template"
version = "0.1.0"
description = "A TaskIQ async worker service template"
requires-python = ">=3.13,<3.14"
dependencies = [
    "taskiq>=0.12.4",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.2.2",
    "sqlmodel>=0.0.39",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "prometheus-client>=0.25.0",
    "ecs-logging>=2.3.0",
    "tenacity>=9.1.4",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.51.0",
    "httpx>=0.28.1",
    "python-socketio>=5.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
    "pytest-docker>=3.2.5",
    "filelock>=3.30.2",
    "psycopg[binary]>=3.3.4",
    "ruff>=0.15.22",
    "mypy>=1.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = [
    "aio-pika<10",   # TODO: removed by the messaging-stack upgrade ticket
    "aiormq<7",      # TODO: removed by the messaging-stack upgrade ticket
    "pamqp<4",       # TODO: removed by the messaging-stack upgrade ticket
    "redis<8",       # TODO: removed by the messaging-stack upgrade ticket
    "mypy<2",        # TODO: removed by the fastapi/starlette + mypy upgrade ticket
    "starlette<1",   # TODO: removed by the fastapi/starlette + mypy upgrade ticket
    "fastapi<0.139", # TODO: removed by the fastapi/starlette + mypy upgrade ticket
]

[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF",
    "ANN", "S", "W", "EM", "TRY", "A", "ARG", "C90", "PT",
    "RSE", "RET",
]
ignore = [
    "TRY003",  # long exception messages
    "S101",    # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"worker_template/tests/**" = ["ANN", "ARG001", "S101", "PLR2004", "PLR0913", "PLC0415"]
"worker_template/services/**" = ["PLR0913"]
"worker_template/middleware/**" = ["ARG002"]
"alembic/**" = ["ANN"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["alembic/versions", "worker_template/tests"]

[[tool.mypy.overrides]]
module = [
    "taskiq.*",
    "taskiq_aio_pika.*",
    "taskiq_redis.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["socketio.*", "engineio.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["worker_template/tests"]
addopts = "--tb=short -n auto --cov=worker_template --cov-fail-under=60"
markers = [
    "integration: marks tests as integration tests (require Docker services)",
]

[tool.coverage.run]
omit = [
    "worker_template/tests/*",
    "worker_template/worker.py",
    "worker_template/scheduler.py",
    "worker_template/health_server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
